[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "BTHP"
version = "0.1.0"
authors = [
    {name = "PoivronJaune", email = "poivronjaune@gmail.com"},
]
description = "Hobby trader is a python package for algorithmic trading ans backtesting"
requires-python = ">=3.10"
dependencies = [
    "yfinance",
    "pandas",
]


[project.scripts]
bthp = "bthp:main"
