[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bhtp"]
namespaces = false

[project]
name = "BHTP-CLI"
version = "0.1.2"
authors = [
    {name = "PoivronJaune", email = "poivronjaune@gmail.com"},
]
description = "Brothers Hobby Trader Platform is a python package for algorithmic trading and backtesting"
requires-python = ">=3.10"
dependencies = [
    "yfinance",
    "pandas",
    "click",
    "jsonschema",
]

[project.scripts]
bhtp = "bhtp.__init__:cli"
